--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+mod_mixin_configs=mixin.tfcpassingdays.json
+mod_mixin_refmap=mixin.tfcpassingdays.refmap.json
